# irxbot

./: .gitignore  .gitmodules  README.md
firmware/config/vesc/: 57BL_VESC1_motor.xml
firmware/esp32/hw_test/BME280/: BME280.ino
firmware/esp32/hw_test/DS18B20/: DS18B20.ino
firmware/esp32/hw_test/IC_Scanner/: IC_Scanner.ino
firmware/esp32/hw_test/MQ2/: MQ2.ino
firmware/esp32/hw_test/SGP30/: SGP30.ino
firmware/esp32/hw_test/ST7789/: ST7789.ino
firmware/esp32/hw_test/VEML7700/: VEML7700.ino
firmware/esp32/hw_test/WS2812B/: WS2812B.ino
firmware/esp32/hw_test/buzzer/: buzzer.ino
firmware/esp32/hw_test/headlights/: headlights.ino
firmware/esp32/hw_test/ina228/: ina228.ino
firmware/stm32/irx_drive/: .cproject  .mxproject  .project  irx_drive Debug.launch  irx_drive.ioc
firmware/stm32/irx_drive/Core/Inc/: bno085.h  main.h  robot_drive.h  stm32f4xx_it.h  vesc_can.h  vl53l1x.h
firmware/stm32/irx_drive/Core/Src/: bno085.c  main.c  robot_drive.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  vesc_can.c  vl53l1x.c
ros2/src/irx_driver/: CMakeLists.txt  package.xml
ros2/src/irx_driver/include/irx_driver/: motor_driver.hpp
ros2/src/irx_driver/src/: motor_driver_node.cpp
scripts/: deploy.sh  echo.py  echo_2.py  flash_stm32.sh  motor_spin.py
